--- a/css/app.css
+++ b/css/app.css
@@ -24,6 +24,11 @@
   margin-top: 10%;
 }
 
+#header
+{
+  margin-bottom: 30px;
+}
+
 .header-title
 {
   text-align: center;
@@ -34,3 +39,12 @@
   font-family: "dragon";
   font-size: 60px;
 }
+
+
+.header-title .header-title-title
+{
+  font-size: 70px;
+  color: rgb(63, 191, 111);
+  background-color: rgb(240, 240, 89);
+}
+
